2010-04-09  Jer Noble  <jer.noble@apple.com>

Reviewed by Darin Adler.

        Work around QTMovieView bug (<rdar://problem/7712713>) by using a QTMovieLayer instead.
        https://bugs.webkit.org/show_bug.cgi?id=37311 / <rdar://problem/7749993>

        * WebView/WebVideoFullscreenController.mm:
        (-[WebVideoFullscreenController windowDidLoad]):
        (-[WebVideoFullscreenController setMediaElement:WebCore::]):

Canonical link: https://commits.webkit.org/48635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57343 268f45cc-cd09-0410-ab3c-d52691b4dbfc